# aifs

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh  conanfile.txt
examples/: example1.cpp  http_server.cpp
include/aifs/: awaitable.h  descriptor.h  event_loop.h  handle.h  log.h  non_copyable.h  operation.h  socket_ops.h  spawn.h  steady_timer.h  task.h  tcp_acceptor.h  tcp_socket.h
include/aifs/http/: express_router.h  http_connection.h  http_server.h  request.h  response.h  router.h
src/: event_loop.cpp
src/http/: response.cpp
